Added new fields to the SUpporter view and added active admin view of Supporter table.

--- a/app/views/supporters/new.html.erb
+++ b/app/views/supporters/new.html.erb
@@ -60,6 +60,7 @@
                 <%= form.input :desire_publicity, :label => "Publicity and PR (Promoting SSP in the news media)", :as => :boolean %>
                 <%= form.input :desire_work_projects, :label => "Work Projects (Working on and helping to lead occasional special construction projects)", :as => :boolean %>
                 <%= form.input :desire_web, :label => "Web Page Design / Production", :as => :boolean %>
+                <%= form.input :desire_plan_events, :label => "Planning Regional Events", :as => :boolean %>
                 <%= form.input :desire_other, :label => "Other Skills", :as => :boolean %>
                 <%= form.input :desire_other_comments,  :label => "Please tell us about any other ways that you would like to contribute:", :as => :text %>
             <% end %>
@@ -131,6 +132,7 @@
             <%= form.input :skill_tool_repair, :label => "Tool Repair", :as => :boolean %>
             <%= form.input :skill_video, :label => "Video Production", :as => :boolean %>
             <%= form.input :skill_web, :label => "Web Page Design / Production", :as => :boolean %>
+            <%= form.input :skill_plan_events, :label => "Event Planning", :as => :boolean %>
             <%= form.input :skill_other_comments, :label => "What other skills and expertise do you have that might help SSP?",
                            :as => :text %>
         <% end %>
