--- a/app/views/purchases/_fields.html.erb
+++ b/app/views/purchases/_fields.html.erb
@@ -7,14 +7,8 @@
             :hint => "Specify either cash, gift card or credit(debit) purchase." %>
     <%= form.input :date %>
     <%= form.input :tax, :input_html => { :size => 15 }, :hint => "Enter the tax, in dollars. Omit dollar sign and commas." %>
-    <%= form.input :total, :input_html => { :size => 15 }, :hint => "Enter the total, including tax. Omit dollar sign and commas." %>
+    <%= form.input :total, :input_html => { :size => 15 }, :hint => "Enter the ttttotal, including tax. Omit dollar sign and commas." %>
   <% end %>
-  <% form.buttons do %>
-    <% if purchase.new_record? %>
-            <%= form.commit_button :label => "Create purchase" %>
-    <% else %>
-            <%= form.commit_button :label => "Update purchase" %>
-    <% end %>
-<% end %>
+  <%= form.buttons %>
 <% end %>
 </div>
