Fixed merge error in invoice and removed plugins causing deprication warning.

--- a/app/views/ssp_web/new_login_request.html.erb
+++ b/app/views/ssp_web/new_login_request.html.erb
@@ -44,7 +44,7 @@
         <br>
       <div id="challenge_failed" ></div>
       <div class="button_container" >
-        <input id="login_request_submit_action" type="submit" value = "Submit." name="commit" >
+        <input id="login_request_submit_action" type="submit" value = "Submit" name="commit" >
       </div>
   <% end %>
 </div>
