--- a/app/views/ssp_web/process_login_request.html.erb
+++ b/app/views/ssp_web/process_login_request.html.erb
@@ -92,6 +92,6 @@
         <%= button_to "Create Liaison", create_liaison_from_request_path(@login_request, :church_id => @church_id),
                 :class => 'link_text'%>
     <br>
-    <h4>3. Send an activation email to the new liaison: </h4>
+    <h4>3. After the liaison is created, you will be taken to the Liaison page to send an activation email to the new liaison.</h4>
   </div>
 </div>
