--- a/app/views/ssp_web/create_liaison.html.erb
+++ b/app/views/ssp_web/create_liaison.html.erb
@@ -1,7 +1,6 @@
 <div id="active_admin_content">
   <div>
     <div>
-      <h3><%=  @church_id %></h3>
       <h3>Edit the information below and click on 'Submit' to create the liaison.</h3>
       <%= semantic_form_for @liaison do |form| %>
           <%= form.inputs do %>
@@ -18,6 +17,7 @@
               <%= form.input :zip, :input_html => { :value => @login_request.zip }%>
               <%= form.input :email1, :input_html => { :value => @login_request.email }%>
               <%= form.input :email2 %>
+
               <% if @login_request.phone_number_type == "Home" %>
                 <% home_phone = @login_request.phone_number %>
               <% else if @login_request.phone_number_type == "Mobile" %>
@@ -26,12 +26,13 @@
                  <% work_phone = @login_request.phone_number %>
               <% end %>
               <% end %>
-              <% if @login_request.alt_phone_number_type == "Home" %>
-                <% home_phone = @login_request.alt_phone_number %>
-              <% else if @login_request.alt_phone_number_type == "Mobile" %>
-                 <% cell_phone = @login_request.alt_phone_number %>
-              <% else %>
-                 <% work_phone = @login_request.alt_phone_number %>
+              <% if home_phone.nil? && @login_request.alt_phone_number_type == "Home" %>
+                <% alt_home_phone = @login_request.alt_phone_number %>
+              <% else if cell_phone.nil? && @login_request.alt_phone_number_type == "Mobile" %>
+                 <% alt_cell_phone = @login_request.alt_phone_number %>
+              <% else if work_phone.nil? %>
+                 <% alt_work_phone = @login_request.alt_phone_number %>
+              <% end %>
               <% end %>
               <% end %>
               <%= form.input :home_phone, :input_html => { :value => home_phone }%>
